--- a/index.html
+++ b/index.html
@@ -101,37 +101,6 @@
             <input type="text" id="tessera" name="tessera">
         </div>
 
-        <!-- Sezione per inserire i dati dei libri -->
-        <div id="booksSection">
-            <h3>Libri da Donare (Max 10)</h3>
-            <div class="form-group">
-                <label for="titolo">Titolo:</label>
-                <input type="text" id="titolo" name="titolo">
-            </div>
-
-            <div class="form-group">
-                <label for="autore">Autore:</label>
-                <input type="text" id="autore" name="autore">
-            </div>
-
-            <div class="form-group">
-                <label for="editore">Editore:</label>
-                <input type="text" id="editore" name="editore">
-            </div>
-
-            <div class="form-group">
-                <label for="anno">Anno:</label>
-                <input type="text" id="anno" name="anno">
-            </div>
-
-            <div class="form-group">
-                <label for="isbn">ISBN:</label>
-                <input type="text" id="isbn" name="isbn">
-            </div>
-
-            <button type="button" id="addBook">Aggiungi altro libro</button>
-        </div>
-
         <div class="consent-box">
             <label>
                 <input type="checkbox" id="accept" name="accept" required>
@@ -155,41 +124,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.5/xlsx.full.min.js"></script>
 
     <script>
-        let bookCount = 1; // Per tracciare il numero di libri aggiunti
-
-        // Funzione per aggiungere un nuovo libro
-        document.getElementById('addBook').addEventListener('click', function() {
-            if (bookCount < 10) {
-                bookCount++;
-
-                const bookSection = document.createElement('div');
-                bookSection.classList.add('form-group');
-
-                bookSection.innerHTML = `
-                    <h4>Libro ${bookCount}</h4>
-                    <label for="titolo${bookCount}">Titolo:</label>
-                    <input type="text" id="titolo${bookCount}" name="titolo">
-                    <label for="autore${bookCount}">Autore:</label>
-                    <input type="text" id="autore${bookCount}" name="autore">
-                    <label for="editore${bookCount}">Editore:</label>
-                    <input type="text" id="editore${bookCount}" name="editore">
-                    <label for="anno${bookCount}">Anno:</label>
-                    <input type="text" id="anno${bookCount}" name="anno">
-                    <label for="isbn${bookCount}">ISBN:</label>
-                    <input type="text" id="isbn${bookCount}" name="isbn">
-                `;
-                document.getElementById('booksSection').appendChild(bookSection);
-            } else {
-                alert('Puoi aggiungere un massimo di 10 libri.');
-            }
-        });
-
         document.getElementById('donationForm').addEventListener('submit', function(event) {
             event.preventDefault();
             
             const nome = document.getElementById('nome').value.trim();
             const cognome = document.getElementById('cognome').value.trim();
             const email = document.getElementById('email').value.trim();
+            const tessera = document.getElementById('tessera').value.trim();
             const acceptCheckbox = document.getElementById('accept');
             
             if (!nome || !cognome || !email) {
@@ -206,31 +147,28 @@
                 nome,
                 cognome,
                 email,
-                tessera: document.getElementById('tessera').value.trim(),
+                tessera,
                 accept: acceptCheckbox.checked,
             };
 
-            const books = [];
-            for (let i = 1; i <= bookCount; i++) {
-                const titolo = document.getElementById(`titolo${i}`)?.value.trim() || '';
-                const autore = document.getElementById(`autore${i}`)?.value.trim() || '';
-                const editore = document.getElementById(`editore${i}`)?.value.trim() || '';
-                const anno = document.getElementById(`anno${i}`)?.value.trim() || '';
-                const isbn = document.getElementById(`isbn${i}`)?.value.trim() || '';
-
-                books.push({ titolo, autore, editore, anno, isbn });
-            }
-
             // Crea un testo discorsivo con i dati dell'utente
             const textData = [
-                [`Io sottoscritto ${formData.nome} ${formData.cognome}`, `Tessera n. ${formData.tessera} Tel. ${formData.email}`, 'dono alla Biblioteca Elsa Morante le seguenti risorse documentarie:']
+                [`Io sottoscritto ${formData.nome} ${formData.cognome}`, 
+                 `Tessera n. ${formData.tessera} Email: ${formData.email}`, 
+                 'dono alla Biblioteca Elsa Morante le seguenti risorse documentarie:']
             ];
 
-            // Creiamo la tabella dei libri
+            // Aggiungiamo le colonne dei libri
             const bookHeaders = ['Titolo', 'Autore', 'Editore', 'Anno', 'ISBN'];
-            const bookRows = books.map(book => [book.titolo, book.autore, book.editore, book.anno, book.isbn]);
+            // Qui potrai inserire manualmente i dati dei libri, per esempio (modifica questa parte)
+            const bookRows = [
+                ['Il nome della rosa', 'Umberto Eco', 'Bompiani', '1980', '9788830102304'],
+                ['1984', 'George Orwell', 'Mondadori', '1949', '9788804546762'],
+                ['Sapiens', 'Yuval Noah Harari', 'Bompiani', '2014', '9788806226677']
+                // Aggiungi fino a 10 libri
+            ];
 
-            // Aggiungiamo le righe dei libri alla tabella
+            // Aggiungiamo i dati dei libri al testo
             textData.push(bookHeaders);
             textData.push(...bookRows);
 
