--- a/index.html
+++ b/index.html
@@ -1,88 +1,102 @@
 function generateExcel(formData, books) {
-  const documentText = `
-DONAZIONE ALLA BIBLIOTECA ELSA MORANTE
+    const documentText = `DONAZIONE ALLA BIBLIOTECA ELSA MORANTE\nIo sottoscritto ${formData.nome} ${formData.cognome} Tessera n. ${formData.tessera || '_______________'} Tel. ${formData.telefono || '_______________'} e-mail ${formData.email}\ndono alla Biblioteca le risorse documentarie allegate e autorizzo la biblioteca a destinarli all'uso che riterrà più opportuno (acquisizione al patrimonio, scambio, dono, bookcrossing o scarto, nel caso in cui, a giudizio insindacabile della biblioteca, i materiali risultino inutilizzabili) senza alcun vincolo per la biblioteca stessa nei miei confronti.\n\nData: ${new Date().toLocaleDateString('it-IT')}`;
 
-Io sottoscritto ${formData.nome} ${formData.cognome}
-Tessera n. ${formData.tessera || '_______________'}
-Tel. ${formData.telefono || '_______________'}
-e-mail ${formData.email}
-dono alla Biblioteca le risorse documentarie allegate e autorizzo la biblioteca a destinarli all'uso che riterrà più opportuno (acquisizione al patrimonio, scambio, dono, bookcrossing o scarto, nel caso in cui, a giudizio insindacabile della biblioteca, i materiali risultino inutilizzabili) senza alcun vincolo per la biblioteca stessa nei miei confronti
+    const wb = XLSX.utils.book_new();
+    const ws_data = [
+        ['DONAZIONE ALLA BIBLIOTECA ELSA MORANTE'], // Title
+        [''], // Blank row
+        ...documentText.split('\n').map(line => [line]), // Document text
+        [''], // Blank row
+        ['Elenco dei libri donati:'], // Subtitle
+        [''], // Blank row
+        ['Titolo', 'Autore', 'Editore', 'Anno', 'ISBN'], // Table headers
+        ...books.map(book => [book.title, book.author, book.publisher, book.year, book.isbn]) // Book data
+    ];
 
-Data: ${new Date().toLocaleDateString('it-IT')}`;
+    const ws = XLSX.utils.aoa_to_sheet(ws_data);
 
-  const wb = XLSX.utils.book_new();
-  const ws_data = [
-    // Emphasize title with bold and centered alignment
-    [{
-      v: 'DONAZIONE ALLA BIBLIOTECA ELSA MORANTE',
-      s: {
-        font: { bold: true },
-        alignment: { horizontal: 'center' }
-      }
-    }],
-    // Separate donor information with blank lines
-    [],
-    [documentText.split('\n')[0]], // First line of donor information
-    [],
-    // Wrap remaining lines of donor information and align left
-    ...documentText.split('\n').slice(1).map(line => ({
-      v: line,
-      s: { alignment: { horizontal: 'left', wrapText: true } }
-    })),
-    [],
-    // Emphasize "Elenco dei libri donati:" with bold and centered alignment
-    [{
-      v: 'Elenco dei libri donati:',
-      s: {
-        font: { bold: true },
-        alignment: { horizontal: 'center' }
-      }
-    }],
-    [],
-    // Adjust column widths for better readability
-    ['Titolo', 'Autore', 'Editore', 'Anno', 'ISBN'].map(header => ({ v: header, wch: 30 })) // Adjust width based on content length
-  ];
+    // Set column widths
+    ws['!cols'] = [
+        { wch: 40 }, // Title
+        { wch: 30 }, // Author
+        { wch: 30 }, // Publisher
+        { wch: 10 }, // Year
+        { wch: 15 }  // ISBN
+    ];
 
-  books.forEach(book => {
-    ws_data.push([book.title, book.author, book.publisher, book.year, book.isbn]);
-  });
+    // Merge cells for the main title
+    ws['!merges'] = [{ s: { r: 0, c: 0 }, e: { r: 0, c: 4 } }];
 
-  const ws = XLSX.utils.aoa_to_sheet(ws_data);
-
-  // Apply styles to header row (consider using a separate header object)
-  const headerRow = ws['A1'];
-  if (headerRow) {
-    headerRow.s = {
-      fill: { fgColor: { rgb: "FFFF00" } },
-      font: { bold: true },
-      alignment: { horizontal: 'center' }
-    };
-  }
-
-  const mainContentStyle = { // Define reusable styling for donor info and book list
-    alignment: { horizontal: 'left', wrapText: true }
-  };
-
-  // Apply styles to other header cells and donor information
-  const styledCells = [
-    'A8', 'B8', 'C8', 'D8', 'E8', // Header row
-    ...documentText.split('\n').map((line, index) => `A${index + 4}`), // Donor information (excluding title)
-  ];
-  styledCells.forEach(cell => {
-    if (ws[cell]) {
-      ws[cell].s = mainContentStyle;
-      // Consider additional styling for border, font color, etc. based on preference
+    // Apply styles to the main title
+    if (ws['A1']) {
+        ws['A1'].s = {
+            font: { bold: true, size: 16 },
+            alignment: { horizontal: 'center', vertical: 'center' },
+            fill: { fgColor: { rgb: 'FFCCFF' } }
+        };
     }
-  });
 
-  XLSX.utils.book_append_sheet(wb, ws, "Donazione");
+    // Apply styles to document text
+    for (let i = 2; i <= ws_data.length - 6; i++) {
+        const cell = ws[`A${i + 1}`];
+        if (cell) {
+            cell.s = {
+                alignment: { wrapText: true, vertical: 'top', horizontal: 'justify' },
+                font: { size: 12 }
+            };
+        }
+    }
 
-  const wbout = XLSX.write(wb, { bookType: 'xlsx', type: 'binary' });
-  const blob = new Blob([s2ab(wbout)], { type: 'application/octet-stream' });
-  const url 1  = window.URL.createObjectURL(blob);
-  const a = document.createElement('a');
-  a.href = url;
-  a.download = `donazione_${formData.cognome}_${formData.nome}.xlsx`;
-  a.click();
-  window.URL.revokeObjectURL(url);
+    // Style headers for the book list
+    ['A8', 'B8', 'C8', 'D8', 'E8'].forEach(cell => {
+        if (ws[cell]) {
+            ws[cell].s = {
+                font: { bold: true },
+                alignment: { horizontal: 'center', vertical: 'center' },
+                fill: { fgColor: { rgb: 'FFFFCC' } },
+                border: {
+                    top: { style: 'thin', color: { rgb: '000000' } },
+                    bottom: { style: 'thin', color: { rgb: '000000' } },
+                    left: { style: 'thin', color: { rgb: '000000' } },
+                    right: { style: 'thin', color: { rgb: '000000' } }
+                }
+            };
+        }
+    });
+
+    // Add borders to book data
+    books.forEach((_, idx) => {
+        const row = idx + 9; // Start from row 9
+        ['A', 'B', 'C', 'D', 'E'].forEach(col => {
+            const cell = ws[`${col}${row}`];
+            if (cell) {
+                cell.s = {
+                    border: {
+                        top: { style: 'thin', color: { rgb: '000000' } },
+                        bottom: { style: 'thin', color: { rgb: '000000' } },
+                        left: { style: 'thin', color: { rgb: '000000' } },
+                        right: { style: 'thin', color: { rgb: '000000' } }
+                    }
+                };
+            }
+        });
+    });
+
+    XLSX.utils.book_append_sheet(wb, ws, "Donazione");
+    const wbout = XLSX.write(wb, { bookType: 'xlsx', type: 'binary' });
+
+    function s2ab(s) {
+        const buf = new ArrayBuffer(s.length);
+        const view = new Uint8Array(buf);
+        for (let i = 0; i < s.length; i++) view[i] = s.charCodeAt(i) & 0xFF;
+        return buf;
+    }
+
+    const blob = new Blob([s2ab(wbout)], { type: 'application/octet-stream' });
+    const url = window.URL.createObjectURL(blob);
+    const a = document.createElement('a');
+    a.href = url;
+    a.download = `donazione_${formData.cognome}_${formData.nome}.xlsx`;
+    a.click();
+    window.URL.revokeObjectURL(url);
 }
