--- a/index.html
+++ b/index.html
@@ -354,32 +354,15 @@ function generateExcel(formData, books) {
         ['Dichiarazione'],
         ['Io sottoscritto dichiaro di donare alla Biblioteca le risorse documentarie allegate e autorizzo la biblioteca a destinarli all\'uso che riterrà più opportuno.'],
         [],
-        ['Data Donazione', new Date().toLocaleDateString('it-IT')]
-    ];
-
-    // Creazione del foglio per i dati del donatore
-    const donatorSheet = XLSX.utils.aoa_to_sheet(documentData);
-
-    // Impostazione dello stile per l'intestazione
-    const headerStyle = {
-        font: { bold: true, color: { rgb: '000000' } },
-        fill: { fgColor: { rgb: 'E0E0E0' } }
-    };
-
-    // Applicazione dello stile all'intestazione del documento
-    donatorSheet['A1'].s = headerStyle;
-    donatorSheet['A10'].s = headerStyle;
-
-    // Creazione del foglio per i libri
-    const booksData = [
-        ['Elenco dei Libri Donati'],
+        ['Data Donazione', new Date().toLocaleDateString('it-IT')],
         [],
+        ['Elenco Libri Donati'],
         ['Titolo', 'Autore', 'Editore', 'Anno', 'ISBN']
     ];
 
     // Aggiunta dei libri alla lista
     books.forEach(book => {
-        booksData.push([
+        documentData.push([
             book.title || 'Non specificato', 
             book.author || 'Non specificato', 
             book.publisher || 'Non specificato', 
@@ -388,29 +371,31 @@ function generateExcel(formData, books) {
         ]);
     });
 
-    const booksSheet = XLSX.utils.aoa_to_sheet(booksData);
+    // Creazione del foglio
+    const sheet = XLSX.utils.aoa_to_sheet(documentData);
 
-    // Stile per l'intestazione della tabella libri
-    booksSheet['A1'].s = headerStyle;
-    booksSheet['A3'].s = headerStyle;
+    // Impostazione dello stile per l'intestazione
+    const headerStyle = {
+        font: { bold: true, color: { rgb: '000000' } },
+        fill: { fgColor: { rgb: 'E0E0E0' } }
+    };
+
+    // Applicazione degli stili alle intestazioni
+    const headerRows = [0, 2, 9, 14, 15]; // Righe che devono avere lo stile di intestazione
+    headerRows.forEach(rowIndex => {
+        if (sheet[`A${rowIndex + 1}`]) {
+            sheet[`A${rowIndex + 1}`].s = headerStyle;
+        }
+    });
 
     // Impostazione larghezza colonne
-    donatorSheet['!cols'] = [
-        { wch: 20 },  // Larghezza colonna etichette
-        { wch: 30 }   // Larghezza colonna valori
+    sheet['!cols'] = [
+        { wch: 40 },  // Titolo/Etichetta
+        { wch: 30 }   // Valore
     ];
 
-    booksSheet['!cols'] = [
-        { wch: 40 },  // Titolo
-        { wch: 30 },  // Autore
-        { wch: 30 },  // Editore
-        { wch: 15 },  // Anno
-        { wch: 20 }   // ISBN
-    ];
-
-    // Aggiunta dei fogli al workbook
-    XLSX.utils.book_append_sheet(wb, donatorSheet, "Dettagli Donatore");
-    XLSX.utils.book_append_sheet(wb, booksSheet, "Libri Donati");
+    // Aggiunta del foglio al workbook
+    XLSX.utils.book_append_sheet(wb, sheet, "Donazione Libri");
 
     // Generazione e download del file
     const wbout = XLSX.write(wb, { bookType: 'xlsx', type: 'binary' });
