--- a/index.html
+++ b/index.html
@@ -339,70 +339,75 @@
 
 function generateExcel(formData, books) {
     const wb = XLSX.utils.book_new();
-    
-    // Preparazione dei dati per il documento
+
+    // Creazione del foglio
+    const sheet = XLSX.utils.aoa_to_sheet([]);
+
+    // Dati iniziali (con stile)
     const documentData = [
-        [{ v: 'Donazione alla Biblioteca Elsa Morante', s: { font: { bold: true } } }],
+        ['Donazione alla Biblioteca Elsa Morante'],
         [],
-        [{ v: 'Dati del Donatore', s: { font: { bold: true } } }],
-        [{ v: 'Nome', s: { font: { bold: true } } }, formData.nome],
-        [{ v: 'Cognome', s: { font: { bold: true } } }, formData.cognome],
-        [{ v: 'Numero Tessera', s: { font: { bold: true } } }, formData.tessera || 'Non specificato'],
-        [{ v: 'Telefono', s: { font: { bold: true } } }, formData.telefono || 'Non specificato'],
-        [{ v: 'Email', s: { font: { bold: true } } }, formData.email],
+        ['Dati del Donatore'],
+        ['Nome', formData.nome],
+        ['Cognome', formData.cognome],
+        ['Numero Tessera', formData.tessera || 'Non specificato'],
+        ['Telefono', formData.telefono || 'Non specificato'],
+        ['Email', formData.email],
         [],
-        [{ v: 'Dichiarazione', s: { font: { bold: true } } }],
-        ['Io sottoscritto dichiaro di donare alla Biblioteca le risorse documentarie allegate e autorizzo la biblioteca a destinarli all\'uso che riterrà più opportuno.'],
+        ['Dichiarazione'],
+        [
+            'Io sottoscritto dichiaro di donare alla Biblioteca le risorse documentarie allegate e autorizzo la biblioteca a destinarli all\'uso che riterrà più opportuno.',
+        ],
         [],
         ['Data Donazione', new Date().toLocaleDateString('it-IT')],
         [],
-        [{ v: 'Elenco Libri Donati', s: { font: { bold: true } } }],
-        [
-            { v: 'Titolo', s: { font: { bold: true } } }, 
-            { v: 'Autore', s: { font: { bold: true } } }, 
-            { v: 'Editore', s: { font: { bold: true } } }, 
-            { v: 'Anno', s: { font: { bold: true } } }, 
-            { v: 'ISBN', s: { font: { bold: true } } }
-        ]
+        ['Elenco Libri Donati'],
+        ['Titolo', 'Autore', 'Editore', 'Anno', 'ISBN'],
     ];
 
-    // Aggiunta dei libri alla lista
+    // Aggiunta dati
     books.forEach(book => {
         documentData.push([
-            book.title || 'Non specificato', 
-            book.author || 'Non specificato', 
-            book.publisher || 'Non specificato', 
-            book.year || 'Non specificato', 
-            book.isbn || 'Non specificato'
+            book.title || 'Non specificato',
+            book.author || 'Non specificato',
+            book.publisher || 'Non specificato',
+            book.year || 'Non specificato',
+            book.isbn || 'Non specificato',
         ]);
     });
 
-    // Creazione del foglio
-    const sheet = XLSX.utils.aoa_to_sheet(documentData);
+    // Scrittura dati nel foglio
+    documentData.forEach((row, rowIndex) => {
+        row.forEach((cellValue, colIndex) => {
+            const cellAddress = XLSX.utils.encode_cell({ r: rowIndex, c: colIndex });
 
-    // Impostazione larghezza colonne
+            sheet[cellAddress] = {
+                v: cellValue,
+                t: 's',
+                s: {
+                    font: {
+                        bold: [0, 2, 3, 4, 5, 6, 13].includes(rowIndex), // Rendi in grassetto le righe specificate
+                    },
+                },
+            };
+        });
+    });
+
+    // Aggiunta dimensioni delle colonne
     sheet['!cols'] = [
-        { wch: 40 },  // Prima colonna
-        { wch: 30 },  // Seconda colonna (per i libri, larghezza per più colonne)
+        { wch: 40 }, // Colonna 1
+        { wch: 30 }, // Colonna 2
         { wch: 30 },
         { wch: 30 },
         { wch: 15 },
-        { wch: 20 }
+        { wch: 20 },
     ];
 
-    // Aggiunta del foglio al workbook
+    // Fine del foglio
     XLSX.utils.book_append_sheet(wb, sheet, "Donazione Libri");
 
-    // Generazione e download del file
+    // Creazione del file e download
     const wbout = XLSX.write(wb, { bookType: 'xlsx', type: 'binary' });
-
-    function s2ab(s) {
-        const buf = new ArrayBuffer(s.length);
-        const view = new Uint8Array(buf);
-        for (let i = 0; i < s.length; i++) view[i] = s.charCodeAt(i) & 0xFF;
-        return buf;
-    }
-
     const blob = new Blob([s2ab(wbout)], { type: 'application/octet-stream' });
     const url = window.URL.createObjectURL(blob);
     const a = document.createElement('a');
@@ -410,7 +415,15 @@ function generateExcel(formData, books) {
     a.download = `donazione_${formData.cognome}_${formData.nome}.xlsx`;
     a.click();
     window.URL.revokeObjectURL(url);
+
+    function s2ab(s) {
+        const buf = new ArrayBuffer(s.length);
+        const view = new Uint8Array(buf);
+        for (let i = 0; i < s.length; i++) view[i] = s.charCodeAt(i) & 0xFF;
+        return buf;
+    }
 }
+
 
 
 
