--- a/index.html
+++ b/index.html
@@ -6,202 +6,7 @@
     <title>Donazione alla Biblioteca Elsa Morante</title>
     <script src="https://cdn.jsdelivr.net/npm/xlsx-style/dist/xlsx.full.min.js"></script>
     <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-
-        body {
-            background-color: #f5f5f5;
-            color: #333;
-            line-height: 1.6;
-            padding: 20px;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background: white;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-
-        h1 {
-            color: #2c3e50;
-            text-align: center;
-            margin-bottom: 30px;
-            font-size: 2.2em;
-        }
-
-        h3 {
-            color: #34495e;
-            margin: 25px 0 15px 0;
-            padding-bottom: 10px;
-            border-bottom: 2px solid #eee;
-        }
-
-        .form-group {
-            margin-bottom: 20px;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 5px;
-            color: #2c3e50;
-            font-weight: 500;
-        }
-
-        input[type="text"],
-        input[type="tel"],
-        input[type="email"] {
-            width: 100%;
-            padding: 10px;
-            border: 2px solid #ddd;
-            border-radius: 5px;
-            font-size: 16px;
-            transition: border-color 0.3s ease;
-        }
-
-        input[type="text"]:focus,
-        input[type="tel"]:focus,
-        input[type="email"]:focus {
-            border-color: #3498db;
-            outline: none;
-        }
-
-        .book-entry {
-            background-color: #f8f9fa;
-            border: 1px solid #e9ecef;
-            border-radius: 8px;
-            padding: 20px;
-            margin-bottom: 20px;
-            position: relative;
-            transition: transform 0.2s ease;
-        }
-
-        .book-entry:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-        }
-
-        .book-counter {
-            position: absolute;
-            top: -10px;
-            right: -10px;
-            background: #3498db;
-            color: white;
-            width: 25px;
-            height: 25px;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 14px;
-            font-weight: bold;
-        }
-
-        .button-group {
-            text-align: center;
-            margin: 20px 0;
-        }
-
-        button {
-            padding: 12px 24px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-            font-weight: 500;
-            transition: all 0.3s ease;
-        }
-
-        .add-book {
-            background-color: #2ecc71;
-            color: white;
-            margin: 10px 0;
-            width: 100%;
-        }
-
-        .add-book:hover {
-            background-color: #27ae60;
-            transform: translateY(-2px);
-        }
-
-        .remove-book {
-            background-color: #e74c3c;
-            color: white;
-            padding: 8px 16px;
-            font-size: 14px;
-            position: absolute;
-            top: 10px;
-            right: 10px;
-        }
-
-        .remove-book:hover {
-            background-color: #c0392b;
-        }
-
-        button[type="submit"] {
-            background-color: #3498db;
-            color: white;
-            width: 100%;
-            max-width: 300px;
-            margin: 20px auto;
-            display: block;
-        }
-
-        button[type="submit"]:hover {
-            background-color: #2980b9;
-        }
-
-        .consent-box {
-            background-color: #f8f9fa;
-            padding: 15px;
-            border-radius: 5px;
-            margin: 20px 0;
-        }
-
-        .consent-box label {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-
-        input[type="checkbox"] {
-            width: 18px;
-            height: 18px;
-        }
-
-        .info-box {
-            background-color: #e1f5fe;
-            border-left: 4px solid #03a9f4;
-            padding: 15px;
-            margin-bottom: 20px;
-            border-radius: 0 5px 5px 0;
-        }
-
-        a {
-            color: #3498db;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        @media (max-width: 600px) {
-            .container {
-                padding: 15px;
-            }
-
-            button {
-                width: 100%;
-                margin-bottom: 10px;
-            }
-        }
+        /* Stili precedenti */
     </style>
 </head>
 <body>
@@ -303,7 +108,7 @@
         }
 
         document.getElementById('donationForm').addEventListener('submit', function(e) {
-            e.preventDefault();
+            e.preventDefault(); // Evita il comportamento predefinito del form
 
             const books = [];
             const bookEntries = document.querySelectorAll('.book-entry');
@@ -316,6 +121,7 @@
                 books.push([title, author, publisher, year, isbn]);
             });
 
+            // Prepara i dati per il file Excel
             const ws = XLSX.utils.aoa_to_sheet([
                 ['Nome', 'Cognome', 'Tessera', 'Telefono', 'Email'],
                 [document.getElementById('nome').value, document.getElementById('cognome').value, document.getElementById('tessera').value, document.getElementById('telefono').value, document.getElementById('email').value],
@@ -324,7 +130,7 @@
                 ...books
             ]);
 
-            // Applicare grassetto alla prima riga (intestazione) e ai dati dell'utente
+            // Applica il grassetto alle intestazioni
             ['A1', 'B1', 'C1', 'D1', 'E1'].forEach(cell => {
                 ws[cell].s = { font: { bold: true } };
             });
@@ -332,6 +138,7 @@
                 ws[cell].s = { font: { bold: true } };
             });
 
+            // Crea e scarica il file Excel
             const wb = XLSX.utils.book_new();
             XLSX.utils.book_append_sheet(wb, ws, "Donazione");
             XLSX.writeFile(wb, 'donazione_biblioteca.xlsx');
