--- a/index.html
+++ b/index.html
@@ -338,94 +338,78 @@
 
 
 function generateExcel(formData, books) {
-  // Testo del documento di donazione con formattazione migliorata
-  const documentText = `DONAZIONE ALLA BIBLIOTECA ELSA MORANTE
+    const wb = XLSX.utils.book_new();
+    
+    // Preparazione dei dati per il documento
+    const documentData = [
+        [{ v: 'Donazione alla Biblioteca Elsa Morante', s: { font: { bold: true } } }], // Grassetto
+        [],
+        [{ v: 'Dati del Donatore', s: { font: { bold: true } } }], // Grassetto
+        [{ v: 'Nome', s: { font: { bold: true } } }, formData.nome], // Grassetto
+        [{ v: 'Cognome', s: { font: { bold: true } } }, formData.cognome], // Grassetto
+        [{ v: 'Numero Tessera', s: { font: { bold: true } } }, formData.tessera || 'Non specificato'], // Grassetto
+        [{ v: 'Telefono', s: { font: { bold: true } } }, formData.telefono || 'Non specificato'], // Grassetto
+        [{ v: 'Email', s: { font: { bold: true } } }, formData.email], // Grassetto
+        [],
+        [{ v: 'Dichiarazione', s: { font: { bold: true } } }], // Grassetto
+        ['Io sottoscritto dichiaro di donare alla Biblioteca le risorse documentarie allegate e autorizzo la biblioteca a destinarli all\'uso che riterrà più opportuno.'],
+        [],
+        ['Data Donazione', new Date().toLocaleDateString('it-IT')],
+        [],
+        [{ v: 'Elenco Libri Donati', s: { font: { bold: true } } }], // Grassetto
+        [
+            { v: 'Titolo', s: { font: { bold: true } } }, // Grassetto
+            { v: 'Autore', s: { font: { bold: true } } }, // Grassetto
+            { v: 'Editore', s: { font: { bold: true } } }, // Grassetto
+            { v: 'Anno', s: { font: { bold: true } } }, // Grassetto
+            { v: 'ISBN', s: { font: { bold: true } } } // Grassetto
+        ]
+    ];
 
-Io sottoscritto ${formData.nome} ${formData.cognome}
-
-Tessera n.     : ${formData.tessera || '_______________'}
-Tel.           : ${formData.telefono || '_______________'}
-e-mail         : ${formData.email}
-
-Dono alla Biblioteca le risorse documentarie allegate e autorizzo la biblioteca a destinarli all'uso che riterrà più opportuno (acquisizione al patrimonio, scambio, dono, bookcrossing o scarto, nel caso in cui, a giudizio insindacabile della biblioteca, i materiali risultino inutilizzabili) senza alcun vincolo per la biblioteca stessa nei miei confronti.
-
-Data: ${new Date().toLocaleDateString('it-IT')}`;
-
-  const wb = XLSX.utils.book_new();
-  
-  // Miglioramento della struttura dei dati
-  const ws_data = [
-    [{ v: 'DONAZIONE ALLA BIBLIOTECA ELSA MORANTE', s: { font: { bold: true, sz: 16 } } }],
-    [''],
-    ...documentText.split('\n').map(line => [line]),
-    [''],
-    [{ v: 'Elenco dei libri donati:', s: { font: { bold: true } } }],
-    [''],
-    [
-      { v: 'Titolo', s: { fill: { fgColor: { rgb: "CCCCCC" } }, font: { bold: true }, border: { bottom: { style: "thin" } } } },
-      { v: 'Autore', s: { fill: { fgColor: { rgb: "CCCCCC" } }, font: { bold: true }, border: { bottom: { style: "thin" } } } },
-      { v: 'Editore', s: { fill: { fgColor: { rgb: "CCCCCC" } }, font: { bold: true }, border: { bottom: { style: "thin" } } } },
-      { v: 'Anno', s: { fill: { fgColor: { rgb: "CCCCCC" } }, font: { bold: true }, border: { bottom: { style: "thin" } } } },
-      { v: 'ISBN', s: { fill: { fgColor: { rgb: "CCCCCC" } }, font: { bold: true }, border: { bottom: { style: "thin" } } } }
-    ]
-  ];
-
-  // Aggiunta libri con stile
-  books.forEach(book => {
-    ws_data.push([
-      book.title, 
-      book.author, 
-      book.publisher, 
-      book.year, 
-      book.isbn
-    ]);
-  });
-
-  const ws = XLSX.utils.aoa_to_sheet(ws_data);
-
-  // Impostazione larghezze colonne con maggiore precisione
-  ws['!cols'] = [
-    { wch: 50 },  // Titolo
-    { wch: 35 },  // Autore
-    { wch: 35 },  // Editore
-    { wch: 10 },  // Anno
-    { wch: 20 }   // ISBN
-  ];
-
-  // Aggiungi bordi e formattazione alle righe dei dati
-  const numRows = ws_data.length;
-  for (let i = 9; i < numRows; i++) {
-    ['A', 'B', 'C', 'D', 'E'].forEach(col => {
-      const cellRef = `${col}${i}`;
-      if (ws[cellRef]) {
-        ws[cellRef].s = {
-          border: {
-            bottom: { style: "thin", color: { rgb: "CCCCCC" } }
-          }
-        };
-      }
+    // Aggiunta dei libri alla lista
+    books.forEach(book => {
+        documentData.push([
+            book.title || 'Non specificato', 
+            book.author || 'Non specificato', 
+            book.publisher || 'Non specificato', 
+            book.year || 'Non specificato', 
+            book.isbn || 'Non specificato'
+        ]);
     });
-  }
 
-  XLSX.utils.book_append_sheet(wb, ws, "Donazione");
+    // Creazione del foglio
+    const sheet = XLSX.utils.aoa_to_sheet(documentData);
 
-  // Download del file
-  const wbout = XLSX.write(wb, { bookType: 'xlsx', type: 'binary' });
-  
-  function s2ab(s) {
-    const buf = new ArrayBuffer(s.length);
-    const view = new Uint8Array(buf);
-    for (let i = 0; i < s.length; i++) view[i] = s.charCodeAt(i) & 0xFF;
-    return buf;
-  }
+    // Impostazione larghezza colonne
+    sheet['!cols'] = [
+        { wch: 40 },  // Prima colonna
+        { wch: 30 },  // Seconda colonna (per i libri, larghezza per più colonne)
+        { wch: 30 },
+        { wch: 30 },
+        { wch: 15 },
+        { wch: 20 }
+    ];
 
-  const blob = new Blob([s2ab(wbout)], { type: 'application/octet-stream' });
-  const url = window.URL.createObjectURL(blob);
-  const a = document.createElement('a');
-  a.href = url;
-  a.download = `donazione_${formData.cognome}_${formData.nome}.xlsx`;
-  a.click();
-  window.URL.revokeObjectURL(url);
+    // Aggiunta del foglio al workbook
+    XLSX.utils.book_append_sheet(wb, sheet, "Donazione Libri");
+
+    // Generazione e download del file
+    const wbout = XLSX.write(wb, { bookType: 'xlsx', type: 'binary' });
+
+    function s2ab(s) {
+        const buf = new ArrayBuffer(s.length);
+        const view = new Uint8Array(buf);
+        for (let i = 0; i < s.length; i++) view[i] = s.charCodeAt(i) & 0xFF;
+        return buf;
+    }
+
+    const blob = new Blob([s2ab(wbout)], { type: 'application/octet-stream' });
+    const url = window.URL.createObjectURL(blob);
+    const a = document.createElement('a');
+    a.href = url;
+    a.download = `donazione_${formData.cognome}_${formData.nome}.xlsx`;
+    a.click();
+    window.URL.revokeObjectURL(url);
 }
 
 
